--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,6 @@
 body {
   background-color: #ffffff;
   color: #111827;
-  padding: 1rem;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 
@@ -15,12 +14,19 @@ body {
    HEADER / NAV
    ========================= */
 #header {
-  background-color: #1f3d2b;
-  border-radius: 4rem;
+  background: linear-gradient(
+    135deg,
+    #4a9d61 0%,
+    #3d7a4f 35%,
+    #2d5a3d 70%,
+    #1f3d2b 100%
+  );
+  color: #111827;
   display: flex;
   justify-content: space-around;
   align-items: center;
   width: 100%;
+  height: 10em;
   margin-bottom: 2rem;
   position: sticky;
   top: 0;
@@ -44,7 +50,26 @@ body {
   text-decoration: underline;
   cursor: pointer;
 }
-
+/* =========================
+   FORM AND CTA Button
+   ========================= */
+input[type="email"] {
+  margin: 0 auto;
+  display: block;
+  padding: 0.5em;
+  border: 1px solid #111827;
+}
+input[type="submit"] {
+  padding: 1em;
+  border-radius: 10em;
+  border: 1px solid #111827;
+  background-color: #16a34a;
+  color: #111827;
+  font-weight: 700;
+  margin: 0 auto;
+  display: block;
+  margin-top: 1em;
+}
 /* =========================
    Images styles
    ========================= */
@@ -73,7 +98,7 @@ video {
   color: #6b7280;
   border: 1px solid #e5e7eb;
   padding: 1rem;
-  margin: 2rem 0 2rem 0;
+  margin: 2rem 1rem;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   column-gap: 1rem;
