--- a/styles.css
+++ b/styles.css
@@ -14,12 +14,12 @@ body {
    HEADER / NAV
    ========================= */
 #header {
-  background: linear-gradient(
-    135deg,
-    #4a9d61 0%,
-    #3d7a4f 35%,
-    #2d5a3d 70%,
-    #1f3d2b 100%
+  background: #2a7b9b;
+  background: radial-gradient(
+    circle,
+    rgba(42, 123, 155, 1) 0%,
+    rgba(87, 199, 133, 1) 50%,
+    rgba(42, 123, 155, 1) 100%
   );
   color: #111827;
   display: flex;
@@ -47,7 +47,6 @@ body {
 }
 .nav-link:hover {
   color: #1e1e1e;
-  text-decoration: underline;
   cursor: pointer;
 }
 /* =========================
@@ -62,13 +61,17 @@ input[type="email"] {
 input[type="submit"] {
   padding: 1em;
   border-radius: 10em;
-  border: 1px solid #111827;
+  border: 2px solid #111827;
   background-color: #16a34a;
   color: #111827;
   font-weight: 700;
   margin: 0 auto;
   display: block;
   margin-top: 1em;
+}
+.btn:hover {
+  cursor: pointer;
+  opacity: 0.9;
 }
 /* =========================
    Images styles
@@ -93,7 +96,8 @@ video {
 /* =========================
    League grid
    ========================= */
-#league {
+#league,
+#pickup {
   background-color: #f9fafb;
   color: #6b7280;
   border: 1px solid #e5e7eb;
@@ -103,10 +107,14 @@ video {
   grid-template-columns: repeat(3, 1fr);
   column-gap: 1rem;
 }
-#league h2 {
+#league h2,
+#pickup h2 {
   color: #111827;
   margin-bottom: 0.5rem;
 }
 .description {
   text-align: justify;
+}
+.description {
+  margin-bottom: 0.8em;
 }
